# voyagio

./: README.md  docker-compose.dev.yml
frontend/voyagio/: package-lock.json  package.json
frontend/voyagio/src/app/root/: App.tsx
server/: Dockerfile  pyproject.toml
server/scripts/: load_places_to_api.py  places_population.py
server/voyagio_server/: config.py  database.py  dependencies.py  main.py
server/voyagio_server/alembic/: env.py
server/voyagio_server/alembic/versions/: 5208c52581cb_remove_current_trip_from_user.py  6317303315eb_add_collections_image_column.py
server/voyagio_server/api/v1/: app.py
server/voyagio_server/api/v1/routers/: category.py  city.py  collection.py  place.py  search.py  user.py  user_favorite_category.py
server/voyagio_server/api/v1/schemas/: address.py  category.py  city.py  collection.py  place.py  search.py  user.py  user_favorite_category.py
server/voyagio_server/crud/: address.py  category.py  city.py  collection.py  place.py  user.py  user_favorite_category.py
server/voyagio_server/ml/: recommendations.py
server/voyagio_server/ml/internal/: WEIGHTS_2l.index  __init__.py  classes.py  initializer.py  places_new.csv
server/voyagio_server/models/: address.py  category.py  city.py  collection.py  place.py  place_category.py  user.py  user_favorite_category.py
web/voyagio/: .env  .eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/voyagio/src/: index.css  main.tsx
web/voyagio/src/contexts/: collectionContext.ts  signupContext.ts
web/voyagio/src/hooks/: useAuth.ts
(+116 files in other folders)
