[tool.poetry]
name = "voyagio-server"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.97.0"
sqlalchemy = "^2.0.16"
sqlalchemy-utils = "^0.41.1"
uvicorn = "^0.22.0"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
